시간 관계로 콘솔 게임으로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Project1/.vs/Project1/v17/ipch/AutoPCH/e9dd8afbb534a1fc/PROJECT1.ipch
 Project1/.vs/Project1/v17/Browse.VC.db
 Project1/.vs/Project1/FileContentIndex/a89a3408-ec25-45f5-b2ee-9e3745bf1208.vsidx
 Project1/.vs/Project1/v17/Browse.VC.opendb
+CNETWORK/.vs/CNETWORK/FileContentIndex/75bf99fa-3224-4df9-8437-7e75191e03d3.vsidx
+CNETWORK/.vs/CNETWORK/v17/ipch/AutoPCH/b16827e11393ce93/CNETWORK.ipch
+CNETWORK/.vs/CNETWORK/v17/Browse.VC.opendb
