--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ Project1/.vs/Project1/v17/Browse.VC.opendb
 CNETWORK/.vs/CNETWORK/FileContentIndex/75bf99fa-3224-4df9-8437-7e75191e03d3.vsidx
 CNETWORK/.vs/CNETWORK/v17/ipch/AutoPCH/b16827e11393ce93/CNETWORK.ipch
 CNETWORK/.vs/CNETWORK/v17/Browse.VC.opendb
+CCLIENT/.vs/CCLIENT/v17/ipch/AutoPCH/897074c5644b8107/CCLIENT.ipch
+CCLIENT/.vs/CCLIENT/v17/Browse.VC.db
+CCLIENT/.vs/CCLIENT/FileContentIndex/359baeac-3dc6-4fed-9bcb-1108cf8422aa.vsidx
+CCLIENT/.vs/CCLIENT/v17/Browse.VC.opendb
+CNETWORK/.vs/CNETWORK/FileContentIndex/efe9e3bf-15b0-4eb8-8c09-8836f1fb73dc.vsidx
