--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ CCLIENT/.vs/CCLIENT/v17/Browse.VC.db
 CCLIENT/.vs/CCLIENT/FileContentIndex/359baeac-3dc6-4fed-9bcb-1108cf8422aa.vsidx
 CCLIENT/.vs/CCLIENT/v17/Browse.VC.opendb
 CNETWORK/.vs/CNETWORK/FileContentIndex/efe9e3bf-15b0-4eb8-8c09-8836f1fb73dc.vsidx
+*.vsidx
