서버 다중 클라이언트 처리

--- a/CNETWORK/CNETWORK/CNETWORK.vcxproj.filters
+++ b/CNETWORK/CNETWORK/CNETWORK.vcxproj.filters
@@ -22,4 +22,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Server.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
