--- a/CNETWORK/CNETWORK/CNETWORK.vcxproj
+++ b/CNETWORK/CNETWORK/CNETWORK.vcxproj
@@ -130,6 +130,9 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Server.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
