--- a/CCLIENT/CCLIENT/CCLIENT.vcxproj.filters
+++ b/CCLIENT/CCLIENT/CCLIENT.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="RenderObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TColor.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Color.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
