--- a/CCLIENT/CCLIENT/CCLIENT.vcxproj
+++ b/CCLIENT/CCLIENT/CCLIENT.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Color.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="TColor.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Render.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Board.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="DefineSetting.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Render.h" />
   </ItemGroup>
