--- a/CCLIENT/CCLIENT/CCLIENT.vcxproj
+++ b/CCLIENT/CCLIENT/CCLIENT.vcxproj
@@ -131,6 +131,9 @@
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Observer.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Subject.cpp" />
     <ClCompile Include="TColor.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Render.cpp" />
@@ -142,7 +145,10 @@
     <ClInclude Include="DefineSetting.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Observer.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Render.h" />
+    <ClInclude Include="Subject.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RenderObject.h" />
