--- a/CCLIENT/CCLIENT/CCLIENT.vcxproj.filters
+++ b/CCLIENT/CCLIENT/CCLIENT.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="InputManager.cpp">
       <Filter>소스 파일\System</Filter>
     </ClCompile>
+    <ClCompile Include="Timer.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Client.h">
@@ -91,6 +94,9 @@
     </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>헤더 파일\System</Filter>
+    </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
